# nvui

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md  buildnew.ps1  rebuild.ps1  resources.qrc  vcpkg.json
.circleci/: config.yml
.github/workflows/: build.yml  linux.yml  windows.yml
assets/icons/desktop/: neovim_icon.rc
assets/icons/popup/: NOTICE.txt  data.txt
assets/resources/macos/: Info.plist
cmake/: Findmsgpack.cmake  Findmsgpack.txt
scripts/linux/: build-debug.sh  build-release.sh  package.sh
scripts/windows/: build-debug.ps1  build-release.ps1  package.ps1  test.ps1
src/: animation.cpp  animation.hpp  cmdline.cpp  cmdline.hpp  config.cpp  config.hpp  constants.hpp  cursor.cpp  cursor.hpp  decide_renderer.hpp  editor.cpp  editor.hpp  editor_base.cpp  editor_base.hpp  font.hpp  fontdesc.hpp  grid.cpp  grid.hpp  hlstate.cpp  hlstate.hpp  input.cpp  input.hpp  log.hpp  lru.hpp  main.cpp  mouse.hpp  msgpack_overrides.hpp  nvim.cpp  nvim.hpp  nvim_utils.hpp  object.cpp  object.hpp  popupmenu.cpp  popupmenu.hpp  qeditor.cpp  qeditor.hpp  qpaintgrid.cpp  qpaintgrid.hpp  qt_editorui_base.cpp  qt_editorui_base.hpp  (+9 more)
src/platform/macos/: macos_utils.hpp
src/platform/windows/: d2deditor.cpp  d2deditor.hpp  direct2dpaintgrid.cpp  direct2dpaintgrid.hpp  textformat.cpp  textformat.hpp
test/: test_default_colors.cpp  test_eval.cpp  test_hl_attr_from_object.cpp  test_main.cpp  test_nvim_eval.cpp  test_nvim_set_var.cpp  test_object.cpp  test_object_deserialization_msgpack.cpp
vim/: nvui.vim
vim/doc/: nvui.txt  tags
vim/plugin/: nvui.vim
